src/shared/components/checkbox/checkbox.scss
.checkbox-button {
  cursor: pointer;
}

input[type=checkbox] {
  box-sizing: border-box;
  padding: 0;
}
.checkbox {
  opacity: 0;
  position: absolute;
}
.checkbox-control {
  position: relative;
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  margin-right: 1rem;
  vertical-align: middle;
  background-color: inherit;
  color: var(--color-primary-500);
  border: 2px solid var(--light-text-disabled);

  svg {
    transform: scale(0);
  }
}
.svg-checkbox {
    fill: var(--color-primary-500);
}

.checkbox:checked+.checkbox-control {
  border: none;
  svg {
    transform: scale(1);
  }
}

